@@ -5,7 +5,7 @@
 
 module Hiki
   VERSION = '0.9dev'
-  RELEASE_DATE = '2009-08-16'
+  RELEASE_DATE = '2009-08-17'
 end
 
 # For backward compatibility
