@@ -1,3 +1,6 @@
+2009-08-17  Kazuhiko  <kazuhiko@fdiary.net>
+	* hiki/docdiff/charstring.rb: code cleanup.
+
 2009-08-16  Kazuhiko  <kazuhiko@fdiary.net>
 	* hiki/docdiff/charstring.rb: many changes for Ruby-1.9.
 	* hiki/docdiff/encoding/document.rb: do not guess encoding for
